--- a/web_redesign.html
+++ b/web_redesign.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Haiku Japanese Bistro </title>
+    <link rel="shortcut icon" href="favicon.ico" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <style>
@@ -52,7 +53,7 @@
             background-color: white;
             color: black;
             margin: 0 auto;
-            padding-top: 50px;
+            padding-top: 75px;
             text-align: center;
         }
 
@@ -64,6 +65,7 @@
             font-weight: bold;
             color: black;
         }
+
 
         nav {
             width: 1000px;
@@ -117,7 +119,7 @@
 
         #section-03 {
             width: 1180px;
-            height: 850px;
+            height: 800px;
             background-color: white;
             text-align: center;
             padding-top: 0px;
@@ -127,7 +129,7 @@
 
         #section-04 {
             width: 1180px;
-            height: 500px;
+            height: 1000px;
             background-color: white;
             text-align: center;
             padding-top: 50px;
@@ -136,6 +138,16 @@
         }
 
         #section-05 {
+            width: 1180px;
+            height: 500px;
+            background-color: white;
+            text-align: center;
+            padding-top: 50px;
+            font-size: 30pt;
+            font-style: normal;
+        }
+
+        #section-06 {
             width: 1180px;
             height: 700px;
             background-color: white;
@@ -232,9 +244,10 @@
             bottom: 0;
             text-align: center;
             font-family: "Orator Std";
-            font-size:12px;
+            font-size: 12px;
             padding-top: 10px;
         }
+
        </style>
 
 </head>
@@ -253,10 +266,11 @@
 
     <nav>
         <a href="#section-01"><p id="nav-section-01">HOME</p></a>
-        <a href="#section-02"><p id="nav-section-02">GALLERY</p></a>
-        <a href="#section-03"><p id="nav-section-03">MENU</p></a>
-        <a href="#section-04"><p id="nav-section-04">DELIVERY</p></a>
+        <a href="#section-02"><p id="nav-section-02">ABOUT</p></a>
+        <a href="#section-03"><p id="nav-section-03">GALLERY</p></a>
+        <a href="#section-04"><p id="nav-section-04">MENU</p></a>
         <a href="#section-05"><p id="nav-section-05">INFO</p></a>
+        <a href="#section-05"><p id="nav-section-06">DELIVERY</p></a>
     </nav>
 
     <div id="top"></div>
@@ -271,6 +285,15 @@
     </div>
 
     <div id="section-02">
+        <h2>A B O U T</h2>
+        <br>
+        <br>
+        <p>Here at Haiku, Japanese bistro, we are a distinguished sushi restaurant offering many different
+            types of Japanese cuisine with a fun space to get together with family and friends. We offer affordable and
+            unique dishes in the heart of Minneapolis and the University of Minnesota campus.</p>
+    </div>
+
+    <div id="section-03">
         <h2>G A L L E R Y</h2>
         <br>
         <br>
@@ -300,7 +323,7 @@
     </div>
 
 
-    <div id="section-03">
+    <div id="section-04">
         <h2>M E N U</h2>
 
         <div>
@@ -318,7 +341,7 @@
     </div>
 
 
-    <div id="section-04">
+    <div id="section-05">
         <h2>D E L I V E R Y</h2>
         <div>
             <a href="https://www.bitesquad.com/food/haiku-japanese-bistro/260">
@@ -331,7 +354,7 @@
     </div>
 
 
-    <div id="section-05">
+    <div id="section-06">
         <h2>I N F O</h2>
         <br>
         <h3>OPEN HOURS<br>
@@ -369,7 +392,12 @@
             </form>
         </div>
 
-        <footer><a href="#top"> BACK TO TOP <Br> Copyright @ 2013 all right reserved Haiku Restaurant. <br> Designed and hosted by Ryan Crotty</a></footer>
+
+        <footer>
+                <a href="#top"> BACK TO TOP
+                <Br>Copyright @ 2013 all right reserved Haiku Restaurant.
+                <br> Designed and hosted by Ryan Crotty</a>
+        </footer>
 
 </div> <!------end of wrapper-->
 <script>
